fixed issue where twitter icon was not showing due to outdates self-host fontawesome icons fixed issue where podcast images were not showing due to possible null images from medium rss feed, aslo defaulted to a fallback image

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -197,7 +197,7 @@ button {
 .articles {
   text-align: center;
   background-color: #fff;
-  padding: 0!important !important;
+  padding: 0!important;
 
   .articles-blurred-bg {
     backdrop-filter: blur(20px);
